--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     <p>Bírság (max): $<span id="fineMax">0</span></p>
     <p id="bailRow">Óvadék lehetősége: <span id="bailStatus" class="bailStatus">–</span></p>
     <textarea class="result-box" id="resultBox" readonly></textarea>
-    <button id="copyToClipboard">Másolás</button>
-    <button id="clearSelection">Törlés</button>
+    <button type="button" onclick="copyToClipboard()">Másolás</button>
+    <button type="button" onclick="clearSelection()">Törlés</button>
   </div>
 
 <!-- KÖZÉP: LENYITHATÓ FÜLEK -->
